--- a/CSS/global.css
+++ b/CSS/global.css
@@ -10,6 +10,7 @@ html{
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.6rem;
+    line-height: 1.3;
     color: #555;
     margin: 0;
 }
@@ -17,6 +18,7 @@ body{
 h1,h2,h3,h4,h5,h6{
     font-family: 'Gill Sans','Gill Sans MT',Calibri,'Trebuchet MS',sans-serif;
     color: #000;
+    line-height: 1;
 }
 
 h1,
@@ -63,12 +65,14 @@ img{
 .grid {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
     justify-content: center;
 }
 
 .grid__item{
     width: 100%;
+    flex-grow: 1;
+    flex-shrink: 0;
+    padding: 1rem;
 }
 
 
@@ -86,10 +90,9 @@ section{
     padding: 5.5rem 0;
 }
 
-@media screen and (max-width:749px) {   /* Écran de téléphone */
-    .section_header {
-        text-align: center;
-    }
+
+.section_header {
+    text-align: center;
 }
 
 .header{
@@ -234,6 +237,10 @@ section{
     }
 }
 
+.About{
+    padding: 0 0 0 0;
+}
+
 .About .title{
     text-transform: uppercase;
 }
@@ -246,9 +253,14 @@ section{
     text-align: center;
 }
 
+.About__item img{
+    max-width: 400px;
+    max-height:  500px;
+}
+
 @media screen and (max-width:749px) { /* Écran de téléphone */
     .About__item {
-        align-items: flex-start;
+        /*align-items: flex-start;*/
         text-align: center;
     }
 }
@@ -263,7 +275,7 @@ section{
 
     .About__item.left{
         align-items: center;
-        padding: 7rem;
+        /*padding: 7rem;*/ 
     }
 
     .About__item.right {
@@ -271,4 +283,75 @@ section{
         justify-content: center;
     }
    
+}
+
+.Services {
+    background: #f5f5f5;
+}
+
+.service__img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90px;
+    height: 90px;
+    /*margin: 0 auto;*/
+    border: 2px solid #000000;
+    border-radius: 50%;
+}
+
+.service__img svg{
+    height: 35px;
+}
+
+.service__content{
+    flex: 1;
+}
+
+.service h3{
+    margin-bottom: 0;
+}
+
+@media screen and (max-width:749px) {   /* Écran de téléphone */
+    .service {
+        text-align: center;
+    }
+    .service__img{
+        margin: 0 auto;
+    }
+}
+
+
+@media screen and (min-width:750px) {   /* Écran d'ordinateur */
+    .service{
+        display: flex;
+        align-items: center;
+    }
+    .Services__grid{
+        display: flex;
+    }
+    .Services__item {
+        flex: 1 0 50%;
+        align-items: flex-start;
+        text-align: left;
+    }
+    .service__img{
+        margin-right: 2rem;
+    }
+
+    
+}
+
+.toto {
+    
+}
+
+@media screen and (max-width:749px) {    /* Écran de téléphone */
+
+}
+
+
+@media screen and (min-width:750px) {    /* Écran d'ordinateur */
+    
+
 }
