--- a/CSS/global.css
+++ b/CSS/global.css
@@ -56,6 +56,13 @@ li{
     padding: 0;
 }
 
+.category{
+    margin: 0;
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: #5b6c78;
+}
+
 .container{
     padding: 1rem 2rem;
 }
@@ -102,6 +109,9 @@ section{
 .header{
     background: #fff;
     border-bottom: 1px solid #eee;
+    position: sticky;
+    z-index: 1;
+    top: 0;
 }
 
 .header .logo{
@@ -137,6 +147,7 @@ section{
 }
 
 .social li {
+    margin-bottom: 0;
     padding: 0 5px;
 }
 
@@ -419,9 +430,42 @@ section{
     color: #fff;
     background: #5b6c78;
 }
+
 .card{
     background: #fff;
     text-transform: uppercase;
+    position: relative;
+}
+
+.card__inner {
+    padding: 2rem;
+}
+
+.card__title{
+    margin: 0 0 1rem;
+    font-size: 1.6rem;
+}
+
+.card__overlay {
+    font-size: 5rem;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.card__overlay a {
+    color: #fff;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 
 @media screen and (max-width:749px) {
