--- a/CSS/global.css
+++ b/CSS/global.css
@@ -456,7 +456,7 @@ section{
     top: 0;
     width: 100%;
     height: 100%;
-    display: none;
+    display: none;   /* Masque le Overlay*/
 }
 
 .card__overlay a {
