--- a/CSS/global.css
+++ b/CSS/global.css
@@ -121,9 +121,11 @@ section{
     letter-spacing: 2px;
 }
 
-.navbar{
+/*
+.navbar {
     display: none;
 }
+*/
 
 .header li{
     display: inline-flex;
@@ -190,7 +192,39 @@ section{
 }
 
 @media screen and (max-width:749px) {   /* Écran de téléphone */
-    
+    nav {
+        display: flex;
+        position: fixed;
+        top: 55px;
+        left: 110%;
+        width: 0;
+        height: calc(100vh - 55px);
+        background: #f5f5f6;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        opacity: 0;
+        overflow: hidden;
+        transition: all .4s ease-out;
+    }
+
+    nav .menu li{
+        display: flex;
+        justify-content: center;
+    }
+
+    nav .menu a{
+        display: flex;
+        font-size: 2rem;
+        padding: 2rem;
+    }
+
+    .show-nav nav{
+        opacity: 1;
+        width: 100%;
+        left: 0;
+        z-index: 2;
+    }
 }
 
 @media screen and (min-width:750px) {   /* Écran d'ordinateur */
