--- a/CSS/global.css
+++ b/CSS/global.css
@@ -469,10 +469,16 @@ section{
 .Portofolio .grid__item {
     max-width: 50%;
     margin-bottom: 0;
+    opacity: 1;
+    transition: all 1s ease;
 }
 
 .Portofolio .grid__item.hide{
-    display: none;
+    opacity: 0;
+    max-width: 0;
+    padding: 0;
+    overflow: hidden;
+    transition: all .4s ease;
 }
 
 .Portofolio-filter .grid__item{
@@ -494,12 +500,93 @@ section{
     background: #5b6c78;
 }
 
+.modal{
+    visibility: hidden;
+    opacity: 0;
+    position: fixed;
+    z-index: 4;
+    transform: scale(0);
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    transition: all 0.5s;
+}
+
+.show.modal{
+    transform: scale(1);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal__content{
+    background-color: #fefefe;
+    height: 100vh;
+    padding: 5rem 1rem;
+    overflow: auto;
+    text-align: left;
+}
+
+.modal img{
+    margin-bottom: 2rem;
+}
+.modal__title{
+    margin: 0 0 2rem;
+}
+
+.modal__close{
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    background: none;
+    border: 1px solid #eee;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    font-size: 3.1rem;
+    color: #666;
+    cursor: pointer;
+}
+
+.modal .grid__item{
+    max-width: 100%;
+    margin-bottom: 2rem;
+    opacity: 1;
+    transition: all 1s ease;
+}
+
+@media screen and (max-width:749px) {   /* Écran de téléphone */
+    .Portofolio a {
+        font-size: 5rem;
+    }
+    
+}
+@media screen and (min-width:750px) {   /* Écran d'ordinateur */
+    .Portofolio .grid__item{
+        max-width: 33.33%;
+    }
+    .Portofolio-filter .grid__item{
+        max-width: 25%;
+    }
+    .modal__content{
+        padding: 3rem;
+    }
+
+    .modal .grid__item{
+        max-width: 50%;
+    }
+    
+}
+
 .card{
     background: #fff;
     text-transform: uppercase;
     position: relative;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
     border: 1px solid #eee;
+    overflow: hidden;
 }
 
 .card__inner {
@@ -521,10 +608,11 @@ section{
     top: 0;
     width: 100%;
     height: 100%;
-    display: none;   /* Masque le Overlay*/
+    top: 110%;
+    transition: all 0.4s ease;
 }
 .card:hover .card__overlay {
-    display: block;  /* Affiche le Overlay au survol */
+    top: 0;
 }
 
 .card__overlay a {
@@ -657,3 +745,4 @@ footer .social a:hover {
         transform: translateX(0);
     }
 }
+
