--- a/CSS/global.css
+++ b/CSS/global.css
@@ -332,6 +332,26 @@ section{
     max-height:  500px;
 }
 
+.btn-cv {
+    display: inline-block;
+    padding: 1rem 2rem;
+    background-color: #5b6c78;
+    /* Couleur principale du thème */
+    color: #fff;
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+    margin-top: 1.5rem;
+}
+
+.btn-cv:hover {
+    background-color: #333;
+    /* Couleur au survol */
+    transform: scale(1.05);
+}
+
 @media screen and (max-width:749px) { /* Écran de téléphone */
     .About__item {
         /*align-items: flex-start;*/
