--- a/CSS/global.css
+++ b/CSS/global.css
@@ -771,6 +771,7 @@ footer {
     color: #eee;
     text-align: center;
     font-size: 1.4rem;
+    z-index: 2;
 }
 footer .grid{
     align-items: center;
