--- a/CSS/blog&article.css
+++ b/CSS/blog&article.css
@@ -1,10 +1,11 @@
 
-.blog h1 {
+.blog h1, .blog h2 {
     text-align: center;
 }
 
 .blog__text {
     margin-bottom: 3rem;
+    text-align: center;
 }
 
 .article__card {
@@ -29,6 +30,18 @@
     z-index: 1;
     content: "";
 }
+
+/* évite que le header recouvre les titres lors du scroll vers ancre */
+.content h2,
+.content h3 {
+    scroll-margin-top: 80px;
+}
+
+html {
+    scroll-behavior: smooth; /* si tu veux un défilement fluide */
+}
+
+
 
 @media screen and (min-width:750px) {
     .d-grid {
@@ -58,18 +71,19 @@
 .sidebar {
     position: fixed;
     /* fixé à l’écran */
-    top: 90px;
+    top: 63px;
     /* espace pour ne pas recouvrir le header */
     right: 0;
     /* collé à droite */
     width: 250px;
     /* largeur fixe */
-    height: 60%;
+    height: 80%;
     /* occupe toute la hauteur restante */
     overflow-y: auto;
     /* scroll interne si contenu trop grand */
     background: #fff;
     margin:  1rem 20rem 1rem 0.5rem;
+    padding: 1%;
     z-index: 1;
     /* au-dessus du contenu principal */
     
