--- a/CSS/global.css
+++ b/CSS/global.css
@@ -6,6 +6,7 @@
 
 html{
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -382,7 +383,6 @@ section{
         display: flex;
         justify-content: center;
     }
-   
 }
 
 .Services {
